--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.1",
     "@vercel/kv": "^3.0.0",
     "next": "15.5.6",
     "pdf-lib": "^1.17.1",
